# cloudformation-diagram-generator

./: .gitignore  .tool-versions  Makefile  README.md  docker-compose.yml
api/: .env.example  Dockerfile  app.py  pyproject.toml
api/src/config/: settings.py
api/src/routes/: diagram_routes.py
api/src/services/: cloudformation_parser.py  diagram_generator.py
api/src/utils/: yaml_loader.py
frontend/: Dockerfile  eslint.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/components/: DiagramDisplay.tsx  DiagramViewer.tsx  YamlEditor.tsx
frontend/src/theme/: theme.ts
